# django-minimal-bootstrap5

./: MANIFEST.in  Makefile  pyproject.toml  setup.cfg
