[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "minimal_django_bootstrap4"
version = "0.1.0"
license = { text = "MIT License" }
authors = [{ name = "Paul Traylor" }]
keywords = ["django"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
dependencies = [
    "Django>=3.2",
]

[project.urls]
Issues = "http://github.com/kfdm/django-bootstrap4/issues"
"Source Code" = "http://github.com/kfdm/django-bootstrap4"
